feat/improve-responsiveness

--- a/src/app/components/update-financial-transaction/update-financial-transaction.component.html
+++ b/src/app/components/update-financial-transaction/update-financial-transaction.component.html
@@ -1,35 +1,45 @@
-<div class="container">
-  <div class="left-section">
-    <mat-card>
-      <h1>Editar o Transação Financeira</h1>
-      <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <mat-form-field appearance="fill" class="full-width">
-            <mat-label>Valor</mat-label>
-            <input matInput formControlName="value">
+<div class="modal-container">
+  <mat-card class="modal-card">
+    <div class="modal-header">
+      <h1>Editar Transação Financeira</h1>
+    </div>
+    <div class="modal-body">
+      <div class="modal-form">
+        <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
+          <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Valor da transação:</mat-label>
+            <input
+              matInput
+              type="text"
+              formControlName="value"
+              (input)="applyCurrencyMaskOnEvent($event)"
+            />
           </mat-form-field>
-
-          <mat-form-field appearance="fill" class="half-width">
-            <mat-label>Descrição</mat-label>
-            <input matInput formControlName="description">
+          <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Descrição da transação:</mat-label>
+            <input matInput formControlName="description" />
           </mat-form-field>
-        </div>
-        <div class="button-container">
-          <button
-            type="submit"
-            mat-button
-            color="primary"
-            [mat-dialog-close]="true"
-            cdkFocusInitial
-          >
-            Editar
-          </button>
-          <button mat-button color="warn" mat-dialog-close>Cancelar</button>
-        </div>
-      </form>
-    </mat-card>
-  </div>
-  <div class="right-section">
-    <img src="assets/images/team.png" alt="Edição de Transação Financeira">
-  </div>
+          <div class="button-group">
+            <button mat-raised-button color="warn" mat-dialog-close>
+              Cancelar
+            </button>
+            <button
+              type="submit"
+              mat-raised-button
+              color="primary"
+              [mat-dialog-close]="true"
+            >
+              Salvar
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-image">
+        <img
+          src="assets/images/team.png"
+          alt="Cadastro de Transação Financeira"
+        />
+      </div>
+    </div>
+  </mat-card>
 </div>
