--- a/src/app/components/create-financial-transaction/create-financial-transaction.component.html
+++ b/src/app/components/create-financial-transaction/create-financial-transaction.component.html
@@ -12,7 +12,7 @@
               matInput
               type="text"
               formControlName="value"
-              (input)="applyCurrencyMask($event)"
+              (input)="applyCurrencyMaskOnEvent($event)"
             />
           </mat-form-field>
           <mat-form-field appearance="fill" class="form-field">
