--- a/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
+++ b/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
@@ -1,56 +1,62 @@
-<div class="container">
-  <div class="left-section">
-    <mat-card>
+<div class="modal-container">
+  <mat-card class="modal-card">
+    <div class="modal-header">
       <h1>Detalhes da Transação Financeira</h1>
-
-      <form>
-        <div class="form-group">
-          <mat-form-field appearance="fill" class="full-width">
-            <mat-label>Valor da transação</mat-label>
+    </div>
+    <div class="modal-body">
+      <div class="modal-form">
+        <form>
+          <mat-form-field appearance="fill" class="form-field">
+            <mat-label>Valor da transação:</mat-label>
             <input
               matInput
               type="text"
               value="{{
-                financialTransaction?.value?.toString()
-                  | currency : 'BRL' : 'symbol' : '1.2-2'
+                _applyCurrencyMask(financialTransaction.value.toString())
               }}"
               disabled
             />
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="full-width">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Descrição da transação financeira</mat-label>
             <input
               matInput
-              value="{{ financialTransaction?.description }}"
+              value="{{ financialTransaction.description }}"
               disabled
             />
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="half-width">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Data de Criação</mat-label>
-            <input
-              matInput
-              type="date"
-              [value]="formattedCreatedAt"
-              disabled
-            />
+            <input matInput type="date" [value]="formattedCreatedAt" disabled />
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="half-width">
+          <mat-form-field appearance="fill" class="form-field">
             <mat-label>Data da última atualização</mat-label>
-            <input
-              matInput
-              type="date"
-              [value]="formattedUpdatedAt"
-              disabled
-            />
+            <input matInput type="date" [value]="formattedUpdatedAt" disabled />
           </mat-form-field>
-        </div>
-      </form>
-    </mat-card>
-  </div>
-  <div class="right-section">
-    <img src="assets/images/team.png" alt="Detalhes sobre transações financeiras" />
-  </div>
+          <div class="button-group">
+            <button mat-raised-button color="warn" mat-dialog-close>
+              Cancelar
+            </button>
+            <button
+              type="submit"
+              mat-raised-button
+              color="primary"
+              [mat-dialog-close]="true"
+            >
+              Ok
+            </button>
+          </div>
+        </form>
+      </div>
+      <div class="modal-image">
+        <img
+          src="assets/images/team.png"
+          alt="Detalhes sobre uma transação financeira"
+        />
+      </div>
+    </div>
+  </mat-card>
 </div>
