feat: improve register page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <a routerLink="/dashboard" class="dashboard-link">
+  <a routerLink="/dashboard">
     <mat-icon class="dashboard-button">paid</mat-icon>
   </a>
   <div class="header-info">
