--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,61 +1,69 @@
 <body>
   <div class="background-div">
     <div class="login-content">
+      <div class="logo">
+        <a>
+          <mat-icon class="dashboard-button">paid</mat-icon>
+        </a>
+      </div>
+
       <form
         class="form-content"
         [formGroup]="loginForm"
         (submit)="submitLogin()"
       >
-        <div class="logo">
-          <!--  -->
-        </div>
         <div>
-          <div style="height: 20px">
-            <div
-              class="error-message"
-              *ngIf="loginForm.get('email')?.errors?.['required'] && loginForm.get('email')?.touched"
-            >
-              Campo de Email Obrigatório!
-            </div>
-            <div
-              class="error-message"
-              *ngIf="loginForm.get('email')?.errors?.['email'] && loginForm.get('email')?.touched"
-            >
-              Formato do email não é válido!
-            </div>
+          <div
+            class="error-message"
+            *ngIf="loginForm.get('email')?.errors?.['required'] && loginForm.get('email')?.touched"
+          >
+            Campo de Email Obrigatório!
+          </div>
+          <div
+            class="error-message"
+            *ngIf="loginForm.get('email')?.errors?.['email'] && loginForm.get('email')?.touched"
+          >
+            Formato do email não é válido!
           </div>
           <div class="input-group">
             <mat-icon matPrefix>email</mat-icon>
-            <input class="input-login" formControlName="email" />
+            <input
+              class="input-login"
+              type="email"
+              placeholder="Digite seu email"
+              formControlName="email"
+            />
           </div>
         </div>
+
         <div>
-          <div style="height: 20px">
-            <div
-              class="error-message"
-              *ngIf="loginForm.get('password')?.errors?.['required'] && loginForm.get('password')?.touched"
-            >
-              Campo de Senha Obrigatório!
-            </div>
+          <div
+            class="error-message"
+            *ngIf="loginForm.get('password')?.errors?.['required'] && loginForm.get('password')?.touched"
+          >
+            Campo de Senha Obrigatório!
           </div>
           <div class="input-group">
-            <mat-icon matPrefix>locked</mat-icon>
+            <mat-icon matPrefix>lock</mat-icon>
             <input
               class="input-login"
               type="password"
+              placeholder="Digite sua senha"
               formControlName="password"
             />
           </div>
         </div>
+
         <div class="button-container">
           <button class="input-submit" [disabled]="!loginForm.valid">
             LOGIN
           </button>
         </div>
       </form>
+
       <div class="register-section">
         <h2>Boas-vindas ao</h2>
-        <h2>Finances Manager</h2>
+        <h2><strong>Finances Manager</strong></h2>
         <p>Não tem conta ainda?</p>
         <button routerLink="/register" class="register-button">
           Cadastre-se
