fix: adjust transaction value masking when value is integer to correctly mask the value

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,9 +12,7 @@
     </h2>
     <h2>
       Saldo:
-      <span class="highlight">{{
-        totalTransactionValue.toString() | currency : "BRL" : "symbol" : "1.2-2"
-      }}</span>
+      <span class="highlight">{{ totalTransactionValue }}</span>
     </h2>
   </div>
   <nav class="nav">
