chore: rename component and route

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
     <button
       mat-icon-button
       class="nav-button editar-button"
-      routerLink="/update-user"
+      routerLink="/settings"
     >
       <mat-icon>person</mat-icon>
     </button>
