--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -150,9 +150,7 @@
       </div>
 
       <div class="button-container">
-        <button class="input-submit" routerLink="/dashboard">
-          Cancelar
-        </button>
+        <button class="input-submit" routerLink="/dashboard">Cancelar</button>
         <button class="input-submit" [disabled]="!updateUserForm.valid">
           Salvar
         </button>
