--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background: linear-gradient(to bottom, #cc092f 45%, #fdfdfd 30%);
   display: flex;
   justify-content: center;
