fix: adjust transaction value masking

--- a/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
+++ b/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
@@ -12,7 +12,8 @@
               matInput
               type="text"
               value="{{
-                _applyCurrencyMask(financialTransaction.value.toString())
+                financialTransaction.value.toString()
+                  | currency : 'BRL' : 'symbol' : '1.2-2'
               }}"
               disabled
             />
