--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     </h2>
     <h2>
       Saldo:
-      <span class="highlight">{{ totalTransactionValue }}</span>
+      <span class="highlight">{{ totalTransactionValue.toString() | currency : "BRL" : "symbol" : "1.2-2" }}</span>
     </h2>
   </div>
   <nav class="nav">
