--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="outer">
   <div class="container">
     <div class="form-card">
       <div class="header">
@@ -106,4 +106,4 @@
       </div>
     </div>
   </div>
-</body>
+</div>
