chore: some small ui and text adjustments

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="margem">
+<div class="outer">
   <div class="dashboard-header">
     <h1>Extrato</h1>
   </div>
