--- a/src/app/components/create-financial-transaction/create-financial-transaction.component.html
+++ b/src/app/components/create-financial-transaction/create-financial-transaction.component.html
@@ -7,7 +7,7 @@
       <div class="modal-form">
         <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
           <mat-form-field appearance="fill" class="form-field">
-            <mat-label>Valor da transação:</mat-label>
+            <mat-label>Valor da transação</mat-label>
             <input
               matInput
               type="text"
@@ -16,7 +16,7 @@
             />
           </mat-form-field>
           <mat-form-field appearance="fill" class="form-field">
-            <mat-label>Descrição da transação:</mat-label>
+            <mat-label>Descrição da transação</mat-label>
             <input matInput formControlName="description" />
           </mat-form-field>
           <div class="button-group">
