--- a/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
+++ b/src/app/components/view-financial-transaction-details/view-financial-transaction-details.component.html
@@ -7,7 +7,7 @@
       <div class="modal-form">
         <form>
           <mat-form-field appearance="fill" class="form-field">
-            <mat-label>Valor da transação:</mat-label>
+            <mat-label>Valor da transação</mat-label>
             <input
               matInput
               type="text"
@@ -29,7 +29,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="form-field">
-            <mat-label>Data de Criação</mat-label>
+            <mat-label>Data de criação</mat-label>
             <input matInput type="date" [value]="formattedCreatedAt" disabled />
           </mat-form-field>
 
