--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -4,9 +4,9 @@
   align-items: center;
 }
 
-.margem {
-  margin: 5vh 5vw;
+.outer {
   padding-bottom: 5vw;
+  width: 100vw;
 }
 
 h1 {
@@ -15,29 +15,11 @@ h1 {
 }
 
 .dashboard-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  width: 100%;
-
-  box-sizing: border-box;
-  max-width: 1000px;
-  margin: auto;
   margin-top: 40px;
-  justify-content: left;
 }
 .search-bar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 100%;
-
-  box-sizing: border-box;
-  max-width: 1000px;
-  margin: auto;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 thead {
@@ -81,19 +63,22 @@ tr:nth-child(odd) {
   border: none;
 }
 
-mat-card {
-  margin: auto;
-  max-width: min(1000px, 90vw);
+mat-card, .dashboard-header, .search-bar {
+  margin-right: auto;
+  margin-left: auto;
+  width: min(1000px, 90vw);
+  display: flex;
 }
 
 .table-actions-cell span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 100%;
   display: flex;
   justify-content: center;
   margin: auto;
+
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 .transaction-cell {
@@ -129,8 +114,6 @@ th,
 
 .create-item-icon,
 .create-item-button {
-  width: 70px;
-  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -168,10 +151,14 @@ th,
 }
 
 @media (max-width: 432px) {
-  .margem {
-    margin: 0 5vw;
+  mat-card, table {
+    width: 90vw;
+    margin: auto;
     padding: 0;
-    padding-bottom: 5vw;
-    overflow: scroll;
+  }
+
+  mat-icon, .table-actions-cell {
+    margin: 0;
+    padding: 0;
   }
 }
