--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,23 +1,13 @@
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  background-color: #f4f6f8; /* Neutral background for a clean look */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
 .background-div {
+  font-family: "Roboto", sans-serif;
+  background-color: #f4f6f8;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
+  min-height: 98vh;
+  padding: 1vh 0;
 }
 
 .login-content {
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
@@ -66,7 +56,7 @@ body {
 }
 
 .error-message {
-  color: #d32f2f; /* Red for error messages */
+  color: #d32f2f;
   font-size: 14px;
   margin: 5px 0;
 }
@@ -76,7 +66,7 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   color: #fff;
-  background-color: #4caf50; /* Green */
+  background-color: #4caf50;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -84,12 +74,12 @@ body {
 }
 
 .input-submit:disabled {
-  background-color: #c8e6c9; /* Light green for disabled button */
+  background-color: #c8e6c9;
   cursor: not-allowed;
 }
 
 .input-submit:hover:not(:disabled) {
-  background-color: #388e3c; /* Darker green on hover */
+  background-color: #388e3c;
 }
 
 .register-section {
@@ -97,12 +87,18 @@ body {
   margin-top: 20px;
 }
 
+mat-icon {
+  padding-right: 5px;
+  color: #cc092f;
+}
+
 .register-button {
+  margin-bottom: 15px;
   margin-top: 10px;
   padding: 10px 20px;
   font-size: 16px;
   color: #fff;
-  background-color: #007bff; /* Blue */
+  background-color: #007bff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -110,12 +106,12 @@ body {
 }
 
 .register-button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+  background-color: #0056b3;
 }
 
 @media (max-width: 480px) {
   .login-content {
-    max-width: 320px;
+    max-width: 83vw;
     padding: 15px;
   }
 
