--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
               <mat-icon class="color-icon">visibility</mat-icon>
             </button>
             <button
-              (click)="openEditItemDialog(financialTransaction)"
+              (click)="openUpdateItemDialog(financialTransaction)"
               mat-icon-button
               class="button-color-edit"
             >
