--- a/src/app/components/financial-transaction/financial-transaction.component.css
+++ b/src/app/components/financial-transaction/financial-transaction.component.css
@@ -20,7 +20,7 @@
 }
 
 .modal-header h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.8rem;
   color: #6a1e8e;
   margin: 0;
