--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -66,14 +66,14 @@
               mat-icon-button
               class="button-color-view"
             >
-              <mat-icon class="color-icon">visibility</mat-icon>
+              <mat-icon>visibility</mat-icon>
             </button>
             <button
               (click)="openUpdateItemDialog(financialTransaction)"
               mat-icon-button
               class="button-color-edit"
             >
-              <mat-icon class="color-icon">edit</mat-icon>
+              <mat-icon>edit</mat-icon>
             </button>
 
             <button
@@ -81,7 +81,7 @@
               mat-icon-button
               class="button-color-delete"
             >
-              <mat-icon class="color-icon">delete</mat-icon>
+              <mat-icon>delete</mat-icon>
             </button>
           </span>
         </td>
