--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -2,13 +2,13 @@
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
   background: #cc092f;
 }
 
 .container {
   width: 800px;
-  max-width: 98vw;
+  max-width: 98dvw;
   padding: 20px;
   box-sizing: border-box;
   margin: auto;
