--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -1,13 +1,13 @@
 .outer {
   font-family: Arial, sans-serif;
   display: flex;
-  min-height: 100vh;
+  min-height: 100dvh;
   background: linear-gradient(135deg, #cc092f 10%, #fdfdfd 60%);
 }
 
 .container {
   width: 800px;
-  max-width: 98vw;
+  max-width: 98dvw;
   padding: 20px;
   box-sizing: border-box;
   margin: auto;
