feat(#42|#47|#49): user experience improvements
Add pop up error when back-end isn't available

Add more meaningful error toasts when logging in and registering

Add loading when logging in and registering

Extra: added health check endpoint call upon acessing login and register pages to trigger backend build, when using free render tier

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,8 +37,8 @@
         </div>
 
         <div class="button-container">
-          <button class="input-submit" [disabled]="!loginForm.valid">
-            LOGIN
+          <button class="input-submit" [disabled]="!loginForm.valid || loading">
+            {{ loading ? "Aguarde..." : "Acessar" }}
           </button>
         </div>
       </form>
